[desktop] unused code removal